--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2490,8 +2490,11 @@ Asus:
     - regex: '(?:P024|P00A)(?:[);/ ]|$)'
       model: 'ZenPad 8.0'
       device: 'tablet'
-    - regex: 'P01MA(?: Build|\))|P01M(?: Build|\))'
+    - regex: 'P01MA?(?:[);/ ]|$)'
       model: 'ZenPad S 8.0'
+      device: 'tablet'
+    - regex: 'ASUS_(w706)(?:[);/ ]|$)'
+      model: '$1'
       device: 'tablet'
     - regex: 'P027'
       model: 'ZenPad 3S 10'
@@ -3924,7 +3927,7 @@ Carrefour:
 
 # Celkon
 Celkon:
-  regex: 'Celkon|(?:Millennia Hero|2GBStar|2GBXpress|CliQ2)(?:[);/ ]|$)'
+  regex: 'Celkon|(?:Millennia Hero|2GBStar|2GBXpress|CliQ2|Campus Prime)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Celkon[ _*](C[78]20)'
@@ -3941,6 +3944,8 @@ Celkon:
       model: '2GB Xpress'
     - regex: 'CliQ2(?:[);/ ]|$)'
       model: 'CliQ 2'
+    - regex: '(Campus Prime)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'Celkon[ _*](CT[^;/]+) Build'
       model: '$1'
       device: 'tablet'
@@ -10130,7 +10135,7 @@ Masstel:
 
 # Maxwest
 Maxwest:
-  regex: '(?:Astro[_ ](?:5N_LTE|X4|5_GO_LTE|X55s)|Virtue Z5|Nitro[_ ](?:4S?|55R|5[XR]|[45] GO|4s LTE)|Gravity_55?_GO|Nitro_Phablet_9s)(?:[);/ ]|$)'
+  regex: '(?:Astro[_ ](?:Phablet_9|5N_LTE|X4|5_GO_LTE|X55s?|5S)|Virtue Z5|Nitro[_ ](?:4S?|55R|5[XR]|[45] GO|4s LTE)|Gravity_55?_GO|Nitro_Phablet_9s)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Astro_5N_LTE'
@@ -10139,8 +10144,8 @@ Maxwest:
       model: 'Astro 5 Go LTE'
     - regex: 'Virtue Z5'
       model: 'Virtue Z5'
-    - regex: 'Astro X55s'
-      model: 'Astro X55s'
+    - regex: 'Astro (X55s?|5s)'
+      model: 'Astro $1'
     - regex: 'Astro[_ ]X4'
       model: 'Astro X4'
     - regex: 'Nitro ([45]) GO'
@@ -10157,6 +10162,9 @@ Maxwest:
     - regex: 'Nitro_Phablet_9s'
       device: 'tablet'
       model: 'Nitro Phablet 9s'
+    - regex: 'Astro_Phablet_9'
+      device: 'tablet'
+      model: 'Astro Phablet 9'
 
 # True Slim (ssbphones.com)
 True Slim:
@@ -22126,5 +22134,11 @@ YUHO:
 # STG Telecom (stgtelecom.com)
 STG Telecom:
   regex: 'STG[ _](A[12] Pro|[AS]1|X[1-3]|S[1-3]0|B10)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Astro (astro.ua)
+Astro:
+  regex: 'Astro[- ](S451|S501)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
