--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7800,3 +7800,21 @@
     model: iQOO U1x
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; V2099A Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 10
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vivo
+    model: Y30 2021
+  os_family: Android
+  browser_family: Chrome
