--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7809,12 +7809,30 @@
   client:
     type: browser
     name: Chrome Webview
-    version: 77.0
+    version: 77.0.3865.120
     engine: Blink
     engine_version: ""
   device:
     type: smartphone
     brand: Vivo
     model: Y30 2021
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; V2047A Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 11
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vivo
+    model: X60 Pro
   os_family: Android
   browser_family: Chrome
