--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7998,3 +7998,39 @@
     model: Reno 3 Lite
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; PDYM10 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 10
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OPPO
+    model: A72n 5G
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; PDYT10 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 10
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OPPO
+    model: A72n 5G
+  os_family: Android
+  browser_family: Chrome
